syntax = "proto3";

package proto.config.v1;

import "proto/attestation_policy/v1/attestation_policy.proto";
import "proto/trust_zone/v1/trust_zone.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/proto/config/v1";

message Config {
  repeated proto.trust_zone.v1.TrustZone trust_zones = 2;
  repeated proto.attestation_policy.v1.AttestationPolicy attestation_policies = 3;
  repeated string plugins = 4;
  reserved 1;
  reserved "plugin";
}
